Inclusão de informações na página HTML

--- a/index.html
+++ b/index.html
@@ -8,13 +8,32 @@
 </head>
 <body>
     <header>
-        <span>Euro TOUR</span> 
+        <span>Europa e suas belezas históricas</span> 
+        <nav>
+
+            <h1>Pontos Turisticos na Europa</h1>
+
+            <ul>
+                <li>Lugares mais visitados</li>
+                <li>Países</li>
+                <li>Todos os Pontos Turisticos</li>
+            </ul>
+        </nav>    
+        
+        <img src = Imagens\Coliseu.jpg> 
+        <img src = Imagens\Torre_de_Pisa.jpg> 
+        <img src = Imagens\Torre.jpg> 
+
+    </header>
+
+    <footer>
         <nav>
             <ul>
-                <li>Passagens</li>
-                <li>Hospedagem</li>
-                <li>Pontos Turisticos</li>
+                <table> 
+                    <tr> Sobre | Contato | Retornar ao inicio</tr>
+                </table>
             </ul>
         </nav>       
-    </header>
+    </footer>
+
 </html>
