Finalizando o código básico em HTML

--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 <body>
     <header>
         <span>Europa e suas belezas históricas</span> 
+        <a href="index.html">
+           <div>
+            <img src="Imagens/bandeira1.jpg">
+           </div> 
+        </a>
         <nav>
             <h1>Pontos Turisticos na Europa</h1>
             <ul>
-                <li>Lugares mais visitados</li>
+                <a href="lugares_visitados.html">
+                    <li>Lugares mais visitados</li>
+                </a>
                 <li>Países</li>
-                <li>Todos os Pontos Turisticos</li>
+                <li>Todos os Pontos Turistgiticos</li>
             </ul>
-        </nav>    
-        
-        <img src = Imagens\Coliseu.jpg> 
-        <img src = Imagens\Torre_de_Pisa.jpg> 
-        <img src = Imagens\Torre.jpg> 
-
+        </nav> 
     </header>
+<main>
+    <img src = Imagens\Coliseu.jpg> 
+    <img src = Imagens\Torre_de_Pisa.jpg> 
+    <img src = Imagens\Torre.jpg> 
+</main>
 
     <footer>
         <nav>
